<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.riosgame.detectordegay.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:id="@+id/EditNombre"
        android:hint="@string/NAME" />

    <Button
        android:text="@string/Btvargas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btVargas"
        android:background="@drawable/botonredondo"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        android:textColor="@android:color/holo_orange_light"
        android:layout_below="@+id/EditNombre"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Btportela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Btportela"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColorHighlight="@android:color/holo_blue_dark"
        android:background="@drawable/botonredondo"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@+id/btVargas"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Btalfonso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btAlfonso"
        android:background="@drawable/botonredondo"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/Btportela"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Btfuentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btFuentez"
        android:background="@drawable/botonredondo"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/btAlfonso"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/ANALIZAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btAnaliz"
        android:background="@drawable/botonredondo"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColor="?attr/colorPrimaryDark"
        android:layout_below="@+id/btFuentez"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btBorrar"
        android:background="@drawable/botonredondo2"
        android:textColor="@android:color/background_light"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/btAnaliz"
        android:layout_alignParentStart="true" />

</RelativeLayout>
